--- a/output/abc_noncomp_e1.tex
+++ b/output/abc_noncomp_e1.tex
@@ -17,7 +17,7 @@ Observations & 100 & 100 & 100 & 100  \\
  \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays the mean difference between the treatment and control groups and the same difference adjusted for non-compliance (Bloom estimator) in two measures of IQ, the Stanford-Binet IQ score at age 3 and the Wechsler Preschool and Primary Scale of Intelligence at age 5. Homoskedastic, asymptotic standard errors are in parentheses.
+\item Note: This table displays the mean difference between the treatment and control groups and the same difference adjusted for non-compliance (Bloom estimator) in two measures of IQ, the Stanford-Binet Intelligence Scale at age 3 and the Wechsler Preschool and Primary Scale of Intelligence at age 5. Homoskedastic, asymptotic standard errors are in parentheses.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
