updated heckman.bib -- capitalizations

--- a/heckman.bib
+++ b/heckman.bib
@@ -6222,12 +6222,12 @@
 }
 
 @Article{Becker_1974_JPESocialinteractions,
-  Title                    = {A theory of social interactions},
+  Title                    = {A Theory of Social Interactions},
   Author                   = {Becker, Gary S.},
   Journal                  = {Journal of Political Economy},
   Year                     = {1974},
   Number                   = {6},
-  Pages                    = {1063-1093},
+  Pages                    = {1063--1093},
   Volume                   = {82},
 
   Owner                    = {Alexandra},
@@ -7903,7 +7903,7 @@
 }
 
 @InCollection{Besharov-etal_2011_ABCProject,
-  Title                    = {The {A}becedarian Project},
+  Title                    = {The {A}becedarian {P}roject},
   Author                   = {Besharov, Douglas J. and Germanis, Peter and Higney, Caeli A. and Call, Douglas M.},
   Booktitle                = {Assessing the Evaluations of Early Childhood Education Programs},
   Publisher                = {Welfare Reform Academy},
@@ -12310,7 +12310,7 @@
   ISBN                     = {0270-6474}
 }
 
-@Article{Bryant1987TIECSE,
+@Article{Bryant_et_al_1987_Carolina_Approach_TIECSE,
   Title                    = {The Carolina Approach to Responsive Education A Model for Day Care},
   Author                   = {Bryant, Donna M. and Ramey, Craig T. and Sparling, Joseph J. and Wasik, Barbara H.},
   Journal                  = {Topics in Early Childhood Special Education},
@@ -23706,6 +23706,22 @@
   Number                   = {3, Part 2},
   Pages                    = {629--661},
   Volume                   = {53}
+}
+
+@Article{Ebenstein_2012_REStud,
+  Title                    = {The Consequences of Industrialization: Evidence from Water Pollution and Digestive Cancers in {C}hina},
+  Author                   = {Ebenstein, Avraham},
+  Journal                  = {Review of Economics and Statistics},
+  Year                     = {2012},
+
+  Month                    = {February},
+  Number                   = {1},
+  Pages                    = {186--201},
+  Volume                   = {94},
+
+  Doi                      = {10.1162/REST_a_00150},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.04.21}
 }
 
 @Article{Eberwein_Ham_etal_1997_REStud,
@@ -47321,7 +47337,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 }
 
 @Unpublished{Kuperman_2015_Clifford-Russell-Interview,
-  Title                    = {Interview with Richard Clifford and Sue Russell},
+  Title                    = {Interview with {R}ichard {C}lifford and {S}ue {R}ussell},
   Author                   = {Sylvi Kuperman},
   Year                     = {2015},
 
@@ -58883,7 +58899,7 @@ Robinson, Lara Rachel},
 }
 
 @Booklet{Obrien-Sanders_1974_ABC-brochure,
-  Title                    = {The Carolina Abecedarian Project},
+  Title                    = {The {C}arolina {A}becedarian {P}roject},
 
   Address                  = {{Frank Porter Graham Child Development Center}},
   Author                   = {O'Brien, Carolyn and Sanders, Joe},
@@ -69780,6 +69796,22 @@ Robinson, Lara Rachel},
   Timestamp                = {2008.04.08}
 }
 
+@Article{Shapley-Shubik_1971_IJGT,
+  Title                    = {The Assignment Game {I}: The Core},
+  Author                   = {Shapley, Lloyd S. and Shubik, Martin},
+  Journal                  = {International Journal of Game Theory},
+  Year                     = {1971},
+
+  Month                    = {December},
+  Number                   = {1},
+  Pages                    = {111--130},
+  Volume                   = {1},
+
+  Doi                      = {10.1007/BF01753437},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.04.20}
+}
+
 @Article{Shapley_Shubik_1969_JET,
   Title                    = {On Market Games},
   Author                   = {Shapley, Lloyd S. and Shubik, Martin},
@@ -74118,6 +74150,21 @@ Robinson, Lara Rachel},
 
   Owner                    = {Andrew},
   Timestamp                = {2015.10.05}
+}
+
+@TechReport{World-Bank_2006_China-Water,
+  Title                    = {{C}hina Water Quality Management: Policy and Institutional Considerations},
+  Author                   = {{The World Bank}},
+  Institution              = {The World Bank, Environment and Social Development Department, East Asia and Pacific Region},
+  Year                     = {2006},
+
+  Address                  = {Washington, DC},
+  Month                    = {September},
+  Number                   = {37752},
+  Type                     = {Discussion Paper},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.04.21}
 }
 
 @Electronic{WBG_2016_Poverty-Overview,
