--- a/output/health_balance.tex
+++ b/output/health_balance.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \captionsetup{singlelinecheck=false,justification=centering}
-\caption{First-phase Treatment vs. Control Groups, Children who Completed the Medical Sweep Follow-up \label{tab:health_baseline}}
+\caption{First-phase Treatment vs. Control Groups, Subjects who Completed the Medical Sweep Follow-up \label{tab:health_baseline}}
 
   \begin{threeparttable}
   \begin{tabular}{cccccccc}
