--- a/heckman.bib
+++ b/heckman.bib
@@ -2,6 +2,15 @@
 % Encoding: Cp1252
 
 
+@TechReport{ReportNCGenAssembly_DayCare_1983,
+Title = {Day Care; Report to the 1983 General Assembly of North Carolina},
+Author = {Legislative Research Commsion},
+Institution = {General Assembly of North Carolina},
+Year = {1983},
+Type = {Legislative Report}
+}
+
+
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
   Author                   = {d'Haultfoeuille, Xavier},
